[gd_scene load_steps=19 format=3 uid="uid://de7cmguomdpu7"]

[ext_resource type="Script" path="res://Nurse.gd" id="1_03upi"]
[ext_resource type="Resource" uid="uid://ba16t882ca520" path="res://resources/dialogues/nurse.dialogue" id="2_880ur"]
[ext_resource type="Texture2D" uid="uid://di0l8h0g2seug" path="res://Assets/environment/CityTileSetTransparent.png" id="3_u6ff0"]
[ext_resource type="Texture2D" uid="uid://cphuqpv1vsogd" path="res://Assets/UI/ImanorBalloon.png" id="4_ojm0t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85eys"]
atlas = ExtResource("3_u6ff0")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btl1j"]
atlas = ExtResource("4_ojm0t")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3jif"]
atlas = ExtResource("4_ojm0t")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t8mo"]
atlas = ExtResource("4_ojm0t")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhn1j"]
atlas = ExtResource("4_ojm0t")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_doo4l"]
atlas = ExtResource("4_ojm0t")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5miv"]
atlas = ExtResource("4_ojm0t")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckjcb"]
atlas = ExtResource("4_ojm0t")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1cvh"]
atlas = ExtResource("4_ojm0t")
region = Rect2(112, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bqe4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btl1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3jif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t8mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhn1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doo4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5miv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckjcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1cvh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_jmp2c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(96, 160, 32, 32)]
}

[sub_resource type="Animation" id="Animation_wchau"]
resource_name = "idle"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 0.9, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(96, 160, 32, 32), Rect2(96, 160, 32, 32), Rect2(128, 160, 32, 32), Rect2(96, 160, 32, 32), Rect2(96, 160, 32, 32), Rect2(96, 160, 32, 32), Rect2(128, 160, 32, 32)]
}

[sub_resource type="Animation" id="Animation_qx2r8"]
resource_name = "talking"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cnbr3"]
_data = {
"RESET": SubResource("Animation_jmp2c"),
"idle": SubResource("Animation_wchau"),
"talking": SubResource("Animation_qx2r8")
}

[node name="Nurse" type="CharacterBody2D"]
process_mode = 3
script = ExtResource("1_03upi")
dialogue_resource = ExtResource("2_880ur")

[node name="nurse_sprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_85eys")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -24)
sprite_frames = SubResource("SpriteFrames_bqe4y")
autoplay = "default"
frame_progress = 0.0274714

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../nurse_sprite")
libraries = {
"": SubResource("AnimationLibrary_cnbr3")
}

[node name="dialogue_area" type="Area2D" parent="."]

[connection signal="body_entered" from="dialogue_area" to="." method="_on_dialogue_area_body_entered"]
[connection signal="body_exited" from="dialogue_area" to="." method="_on_dialogue_area_body_exited"]
